[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dependencies.uuid]
version = "1.18.0"
# Lets you generate random UUIDs
features = [
    "v4",
]