[package]
name = "save-blog-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.41"

[dependencies.uuid]
version = "1.18.0"
# Lets you generate random UUIDs
features = [
    "v4",
]