[package]
name = "save-blog-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.41"
log = "0.4.27"
regex = "1.11.1"
scraper = "0.24.0"
serde_json = "1.0.143"
log4rs = "1.3.0"

[dependencies.uuid]
version = "1.18.0"
# Lets you generate random UUIDs
features = [
    "v4",
]